# autoDJ

./: .gitignore  package.json
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: analysis.py  download.py  health.py  ordering.py
backend/app/services/: analyzer.py  background.py  downloader.py  ordering.py  storage.py  youtube_search.py
backend/app/utils/: camelot.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/player/: effects-pad.tsx  now-playing.tsx  player-bar.tsx  player-controls.tsx  track-progress.tsx  volume-control.tsx
frontend/src/components/playlist/: compatibility-indicator.tsx  import-playlist-button.tsx  playlist-card.tsx  processing-poller.tsx  track-row.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress-bar.tsx  slider.tsx  tabs.tsx
frontend/src/lib/: constants.ts
frontend/src/lib/audio/: crossfader.ts  deck.ts  effects.ts  engine.ts  index.ts  singleton.ts  transitions.ts  (+2 more)
frontend/src/providers/: supabase-provider.tsx
frontend/supabase/migrations/: 20260328000005_add_deezer.sql
supabase/: config.toml  seed.sql
supabase/migrations/: 20260328000001_initial_schema.sql  20260328000002_rls_policies.sql  20260328000003_indexes.sql  20260328000004_storage.sql  20260328000006_add_transition_types.sql
(+34 files in other folders)
